unpackaged/main/default/objects/litify_docs__Packet__c/litify_docs__Packet__c.object-meta.xml
<CustomObject>
    <description>Container for one to many Templates</description>
    <label>Merge Packet</label>
    <nameField>
        <label>Merge Packet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merge Packets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>