unpackaged/main/default/objects/litify_docs__Packet__c/fields/litify_docs__Packet_Category__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Packet_Category__c</fullName>
    <description>Category of the merge packet.</description>
    <label>Packet Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Client Documents</fullName>
            </value>
            <value>
                <fullName>Medical Forms</fullName>
            </value>
            <value>
                <fullName>Insurance Forms</fullName>
            </value>
            <value>
                <fullName>Court Documents</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>