unpackaged/main/default/objects/litify_docs__Packet__c/fields/litify_docs__Packet_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Packet_Number__c</fullName>
    <description>Alphanumeric key for packet</description>
    <inlineHelpText>Alphanumeric key for packet</inlineHelpText>
    <label>Packet Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>