unpackaged/main/default/objects/litify_docs__Packet__c/fields/litify_docs__Starting_Object__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Starting_Object__c</fullName>
    <description>Object upon which the Templates in this Packet will be merged.</description>
    <inlineHelpText>Object upon which the Templates in this Packet will be merged.</inlineHelpText>
    <label>Starting Object</label>
    <length>64</length>
    <type>Text</type>
</CustomField>