unpackaged/main/default/objects/litify_docs__Packet__c/fields/litify_docs__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>litify_docs__Subcategory__c</fullName>
    <description>Subcategory of the merge packet.</description>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>